@@ -1,9 +1,0 @@
-#!/bin/bash
-
-sourcedir=/home/e.lorenz/code/parsivald
-destination="`pwd`"
-
-cd "$sourcedir"
-
-cp -r input lmpout options.cfg pyprefs "$destination"
-
